# twitter-clone

./: .gitignore  README.md  db.sqlite3  pyproject.toml
authentication/: forms.py  views.py
notification/: models.py  views.py
notification/migrations/: 0001_initial.py
templates/: all_tweets.html  base.html  generic_form.html  index.html  new_tweet.html  notifications.html  profile.html  tweet_detail.html
tweet/: admin.py  forms.py  models.py  views.py
tweet/migrations/: 0001_initial.py  0002_tweet_author.py
twitterclone/: settings.py  urls.py
twitteruser/: admin.py  forms.py  models.py  views.py
twitteruser/migrations/: 0001_initial.py
