[tool.poetry]
name = "django-twitter-clone"
version = "0.1.0"
description = "you tweet and stuff"
authors = ["Andrew Fillenwarth <andyf016@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
django = "^3.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
